--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,25 @@
 <%- include('partials/header'); -%>
-    <h1>Login</h1>
-    <%- include('partials/footer'); -%>
+<form>
+  <h2>Login</h2>
+  <label for="email">Email</label>
+  <input type="text" name="email" id="email" required />
+  <div class="error email"></div>
+  <label for="password">Password</label>
+  <input type="password" name="password" id="password" />
+  <div class="password error"></div>
+  <button>Login</button>
+</form>
+
+<script>
+  const form = document.querySelector("form");
+  form.addEventListener("submit", (e) => {
+    e.preventDefault();
+
+    // get the values posted
+    const email = form.email.value;
+    const password = form.password.value;
+
+    console.log(email, password);
+  });
+</script>
+<%- include('partials/footer'); -%>
