--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,19 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Smoothies</title>
+    <link rel="icon" href="../../public/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smoothies</title>
-  <link rel="icon" href="../../public/favicon.png" type="image/png">
-  <link rel="stylesheet" href="/styles.css">
-</head>
-
-<body>
-  <nav>
-    <h1><a href="/">Ninja Smoothies</a></h1>
-  </nav>
+  <body>
+    <nav>
+      <h1><a href="/">Ninja Smoothies</a></h1>
+      <ul>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup" class="btn">Sign Up</a></li>
+      </ul>
+    </nav>
+  </body>
+</html>
